--- a/src/App.css
+++ b/src/App.css
@@ -10,21 +10,12 @@
 /* -----------------ROOT----------------- */
 
 :root {
-  /* --clr-primary-bg: rgba(0, 0, 0, 0.37);
-  --clr-secondary-bg: rgba(32, 32, 32, 0.664);
-  --clr-bg-accent: rgb(80, 80, 80);
-
-  --clr-font-primary: whitesmoke;
-  --clr-font-accent: hsl(219, 100%, 81%); */
-
-  /* --glow: 0px 0px 6px #87cefa; */
-
   --clr-primary-bg: #0e0e0e;
-  --clr-secondary-bg: #202020c4;
-  --clr-bg-accent: hsla(0, 0%, 12%, 0.61);
+  --clr-secondary-bg: rgba(32, 32, 32, 0.664);
+  --clr-bg-accent: hsl(0, 0%, 6%);
+  --clr-bg-accent-2: hsla(0, 0%, 18%, 0.363);
 
-  --clr-font-primary: #fafaff;
-  /* --clr-font-accent: #1fa5f2; */
+  --clr-font-primary: hsla(0, 0%, 83%, 0.904);
   --clr-font-accent: #06b9e6;
 }
 
@@ -62,19 +53,12 @@ body {
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
   background-color: var(--clr-primary-bg);
+  color: var(--clr-font-primary);
 
   /* -------FONT-------- */
   font-family: "Mulish", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-
-  /* -------BACKGROUND-------- */
-  /* background-image: url("./assets/background.jpg");
-  backdrop-filter: blur(150px);
-  background-position: 0;
-  background-repeat: no-repeat; */
-  /* object-fit: cover; */
-  /* background-size: cover; */
 }
 
 main > section {
@@ -83,22 +67,10 @@ main > section {
 }
 
 main > section > h2 {
-  display: flex;
-  position: absolute;
-  right: 0.75rem;
-  bottom: 0;
-  font-size: clamp(1rem, 10vw, 6rem);
-  text-transform: uppercase;
+  font-size: clamp(1rem, 10vw, 3rem);
   pointer-events: none;
   user-select: none;
-  z-index: 1;
-  gap: 2rem;
-  color: var(--clr-font-accent);
-  /* text-shadow: var(--glow); */
-
-  hr {
-    display: none;
-  }
+  color: var(--clr-font-primary);
 }
 
 /* -----------------NAVBAR----------------- */
@@ -119,22 +91,20 @@ main > section > h2 {
   display: flex;
   align-items: center;
   flex: 5;
-  /* border-right: 3px solid var(--clr-font-accent); */
-  font-size: clamp(3rem, 1vw, 3.5rem);
+  font-size: clamp(3rem, 4vw, 3.5rem);
   margin-right: 1rem;
 }
 
 .nav-logo-left a {
   user-select: none;
   text-decoration: none;
-  /* text-shadow: var(--glow); */
   color: var(--clr-font-accent);
 }
 
 .nav-items-right {
   display: flex;
-  gap: 4rem;
-  font-size: clamp(1rem, 1.5vw, 1.25rem);
+  gap: 5rem;
+  font-size: clamp(1.3rem, 1.5vw, 1.5rem);
   align-items: center;
   margin-inline: 2rem;
 }
@@ -146,11 +116,13 @@ main > section > h2 {
   font-weight: 600;
   outline: 2px solid transparent;
   padding: 1rem;
+  padding-bottom: 0;
 }
 
 .nav-items-right a:hover {
   user-select: none;
   color: var(--clr-font-accent);
+  text-decoration: underline;
 }
 
 /* ----------------- NAV TABLET AND BELOW---------- */
@@ -171,41 +143,46 @@ main > section > h2 {
 /* ----------------- MEDIA Q---------- */
 
 /* -----------------HOME----------------- */
+.BG {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 25%;
+  z-index: 0;
+}
 
 .home-wrapper {
   display: flex;
-  flex-wrap: wrap-reverse;
   height: 100svh;
-  position: relative;
   width: 100dvw;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 }
 
 .home-flex-1 {
-  display: grid;
-  flex: 1;
+  display: flex;
+  flex-direction: column;
   place-content: center;
-  padding-inline: 2rem;
+  align-items: center;
+  z-index: 100;
+  height: 100svh;
+  width: 100dvw;
 }
 
-.home-flex-2 {
-  height: 100dvh;
-  flex: 2;
-  grid-area: home2;
-  display: grid;
-  /* place-content: center; */
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: 35vw;
+.home-centered-content {
+  padding: 2rem;
+  margin-inline: 2rem;
+  /* background: var(--clr-bg-accent-2); */
+  backdrop-filter: blur(1px);
 }
 
 .greeting {
-  font-size: clamp(1.3rem, 5vw, 2rem);
+  font-size: clamp(1.3rem, 5vw, 1.9rem);
   font-weight: 500;
   user-select: none;
   opacity: 90%;
-  letter-spacing: 0.1ch;
+  letter-spacing: 0.2ch;
   word-spacing: -0.25ch;
   font-style: italic;
   opacity: 85%;
@@ -214,110 +191,100 @@ main > section > h2 {
 .name-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: baseline;
-  justify-content: left;
   user-select: none;
-  font-size: clamp(2rem, 5vw, 4rem);
-  /* gap: .5rem; */
 }
 
 .name {
   display: flex;
   text-wrap: nowrap;
-  font-size: clamp(2rem, 5vw, 6rem);
+  font-size: clamp(2rem, 10vw, 7rem);
   color: var(--clr-font-accent);
   font-weight: 800;
+  width: 100%;
 }
 
 .name-titles {
   display: flex;
-  gap: 0.5rem;
-  justify-content: center;
-  border: 2px solid var(--clr-bg-accent);
-  padding: 0.5rem;
-  align-items: center;
-  font-size: clamp(1rem, 3vw, 2rem);
-  border-radius: 0.5rem;
-  width: 100%;
-  margin-block: 1rem;
+  justify-content: space-between;
+  align-content: center;
+  padding: 0.75rem;
+  font-size: clamp(1rem, 2vw, 2rem);
+  margin-block: 0.5rem;
   h2 {
-    font-weight: 400;
-    font-size: clamp(0.75rem, 3vw, 1.5rem);
+    font-weight: 600;
     width: max-content;
-    opacity: 85%;
   }
 }
 
-.home-wrapper hr {
+#seperator {
   margin-block: 1rem;
-  color: var(--clr-font-accent);
-}
-
-.description {
-  max-width: 32rem;
-  line-height: 1.8rem;
-  user-select: none;
-  font-size: clamp(1rem, 10vw, 1.2rem);
-  margin-block: 0.5rem;
-  padding-right: 0.5rem;
-  border-radius: 0.5rem;
-}
-
-.description strong {
-  font-weight: 600;
-  color: var(--clr-font-accent);
-  text-decoration: none;
 }
 
 .ctas-wrapper {
   display: flex;
-  gap: 2rem;
-  max-width: 400px;
-  flex: 1;
+  gap: 1rem;
   align-items: center;
-  justify-content: left;
   user-select: none;
-  height: 100%;
-}
-
-.cta,
-.cta.CV {
-  display: block;
-  font-weight: 600;
-  padding: 0.75rem;
-  padding-inline: 1rem;
-  border-radius: 0.5rem;
-  text-decoration: none;
-  text-align: center;
-  font-size: clamp(1rem, 0.75vw, 1.5rem);
-  background-color: var(--clr-secondary-bg);
-  color: var(--clr-font-accent);
-  position: relative;
-  border-color: transparent;
-}
-
-.cta {
-  flex: 0.75;
   width: 100%;
 }
 
-.cta strong {
+.cta,
+.cta-CV {
+  display: flex;
+  font-weight: 600;
+  padding: 1rem 4rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  text-align: center;
+  font-size: clamp(0.95rem, 2vw, 1.2rem);
   color: var(--clr-font-accent);
+  position: relative;
 }
 
-.cta.CV {
-  flex: 0.05;
+.cta {
+  flex: 1;
+  background-color: var(--clr-secondary-bg);
+  backdrop-filter: blur(20px);
+  align-items: center;
+  justify-content: center;
 }
 
 .cta:hover {
-  font-weight: 600;
   background-color: var(--clr-primary-bg);
-  transition: all 2s ease-out;
-  box-shadow: 0px 0px 0px rgba(131, 131, 131, 0.185);
+  transition: all 1s ease-in-out;
 }
 
-.cta::before,
-.CV::before {
+.cta-CV {
+  /* flex: 0.05; */
+  background-color: var(--clr-font-accent);
+  color: var(--clr-primary-bg);
+  font-weight: 800;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
+#download-icon {
+  position: absolute;
+  opacity: 0;
+  height: 28px;
+  width: 28px;
+  transition: all 0.5s ease-in-out;
+}
+.cta-CV:hover,
+.cta-CV:focus {
+  background-color: var(--clr-primary-bg);
+  outline: 1px solid var(--clr-font-accent);
+  transition: all 0.5s ease-in-out;
+  #download-icon {
+    opacity: 100%;
+    transition-delay: 0.25s;
+
+    color: var(--clr-font-accent);
+  }
+}
+
+.cta::before {
   content: "";
   position: absolute;
   top: 0px;
@@ -329,9 +296,8 @@ main > section > h2 {
   border-radius: 0rem;
 }
 
-.cta:hover::before,
-.CV:hover::before {
-  animation: animateBeforeBorder 0.25s ease-in-out forwards;
+.cta:hover::before {
+  animation: animateBeforeBorder 0.5s ease-in-out forwards;
 }
 
 @keyframes animateBeforeBorder {
@@ -343,8 +309,8 @@ main > section > h2 {
   }
   100% {
     width: 100%;
-    height: 100%;
     border-radius: 0.25rem;
+    height: 100%;
     border-top-color: var(--clr-font-accent);
     border-right-color: transparent;
     border-bottom-color: transparent;
@@ -352,8 +318,7 @@ main > section > h2 {
   }
 }
 
-.cta::after,
-.CV::after {
+.cta::after {
   content: "";
   position: absolute;
   bottom: 0px;
@@ -365,9 +330,8 @@ main > section > h2 {
   border-radius: 0.05rem;
 }
 
-.cta:hover::after,
-.CV:hover::after {
-  animation: animateAfterBorder 0.25s ease-in-out forwards;
+.cta:hover::after {
+  animation: animateAfterBorder 0.5s ease-in-out forwards;
 }
 
 @keyframes animateAfterBorder {
@@ -425,10 +389,28 @@ main > section > h2 {
 .projects-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100svh;
   position: relative;
-  justify-content: center;
+  height: 100svh;
   width: 100dvw;
+
+  h2 {
+    position: absolute;
+    left: 50%;
+    top: 14%;
+    translate: -50% 0%;
+  }
+}
+
+.projects-list {
+  margin: 0 auto;
+  display: grid;
+  grid-template: "projectOne projectTwo projectThree";
+  width: 100dvw;
+  gap: 1rem;
+  height: 100svh;
+  overflow: hidden;
+  align-content: center;
+  justify-content: center;
 }
 
 #project-1 {
@@ -446,19 +428,6 @@ main > section > h2 {
   grid-area: projectThree;
 }
 
-.projects-list {
-  margin: 0 auto;
-  display: grid;
-  grid-template: "projectOne projectTwo projectThree";
-  width: 85dvw;
-  gap: 3rem;
-  height: 80svh;
-  overflow: hidden;
-  align-content: center;
-  justify-content: center;
-  padding-inline: 1rem;
-}
-
 .project-card {
   font-size: clamp(0.9rem, 0.5vw, 3rem);
   min-height: fit-content;
@@ -473,6 +442,9 @@ main > section > h2 {
   object-fit: cover;
   flex: 1;
   border-radius: 0.5rem 0.5rem 0 0;
+  border: 3px solid var(--clr-bg-accent);
+  border-bottom: none;
+  background-color: var(--clr-secondary-bg);
 }
 
 .project-text-wrapper {
@@ -483,16 +455,17 @@ main > section > h2 {
   gap: 0.4rem;
   background: var(--clr-secondary-bg);
   border: 3px solid var(--clr-bg-accent);
-
+  border-top: none;
   padding-inline: 1rem;
   flex: 2;
   border-radius: 0 0 0.5rem 0.5rem;
+  backdrop-filter: blur(15px);
 }
 
 .project-title {
   color: var(--clr-font-accent);
-  font-size: x-large;
-  font-weight: 500;
+  font-size: xx-large;
+  font-weight: 700;
 }
 
 .project-description {
@@ -518,46 +491,85 @@ main > section > h2 {
 
 /* -----------------ABOUT----------------- */
 .about-wrapper {
+  height: 100svh;
+  width: 100dvw;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  height: 100dvh;
+  height: 100svh;
+  width: 100dvw;
+  overflow: hidden;
+  h2 {
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    translate: -50% 0%;
+  }
 }
 
 .about-inner-wrapper {
-  display: grid;
-  height: fit-content;
+  display: flex;
   align-items: center;
-  place-content: center;
-  place-items: center;
-  margin: 0 auto;
-  width: 85svw;
+  justify-content: center;
+  gap: 1rem;
+  position: relative;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.about-description-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.about-text-plus-headshot {
+  display: flex;
+  gap: 1rem;
 }
 
 .headshot-img {
-  display: flex;
   object-fit: contain;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  justify-items: center;
-  height: 15rem;
+  height: 25rem;
   border-radius: 0.5rem;
   border: 3px solid var(--clr-secondary-bg);
+  height: 100%;
 }
 
 .about-span {
   border-radius: 0.5rem;
-  border: 2px solid var(--clr-bg-accent);
+  line-height: 1.5rem;
+  font-size: clamp(1rem, 1vw, 1.2rem);
+  background: var(--clr-secondary-bg);
+  border: 0.05rem solid var(--clr-bg-accent);
+  max-width: 25rem;
+  min-width: 15rem;
+  padding: 0.5rem;
+  font-weight: 400;
+  height: stretch;
 }
 
 .education-wrapper {
   display: grid;
+  gap: 1rem;
+  font-size: clamp(1rem, 1vw, 1.2rem);
   border-radius: 0.5rem;
   border: 2px solid var(--clr-bg-accent);
+  padding: 1em;
+  background: var(--clr-secondary-bg);
+  border: 0.05rem solid var(--clr-secondary-bg);
+}
+
+.education-wrapper h3 {
+  font-size: clamp(1.5rem, 1vw, 1.7rem);
 }
 
 .education {
   display: flex;
-  gap: 0.5rem;
+  justify-content: left;
+  gap: 5rem;
 }
 
 .blue-text {
@@ -568,28 +580,34 @@ main > section > h2 {
 .education-time-frame {
   opacity: 75%;
 }
+.skills-wrapper {
+  display: grid;
+  gap: 1rem;
+  height: 100%;
+}
 
 .skills-card {
   display: grid;
-  border: 2px solid var(--clr-bg-accent);
-  /* background: var(--clr-secondary-bg); */
   list-style: none;
-  background: transparent;
   border-radius: 0.5rem;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   align-items: center;
-  gap: 2rem;
+  background: var(--clr-secondary-bg);
+  border: 0.05rem solid var(--clr-bg-accent);
+  backdrop-filter: blur(50px);
+  width: 100%;
 }
 
 .skills-card h3 {
-  display: flex;
-  color: var(--clr-font-accent);
-  font-size: large;
-  padding-right: 1rem;
+  text-align: center;
+  color: var(--clr-font-primary);
+  font-size: clamp(1.5rem, 1vw, 1.7rem);
 }
 
-.skills-card li:first-child {
+.skills-card li :not(.skill-item-text) {
   color: var(--clr-font-accent);
+  height: 36px;
+  width: 36px;
 }
 
 .skills-items ul {
@@ -598,52 +616,49 @@ main > section > h2 {
 }
 
 .skills-items li {
-  border: 2px solid var(--clr-bg-accent);
+  border: 2px solid var(--clr-bg-accent-2);
   background: var(--clr-secondary-bg);
+  width: 100%;
+  font-weight: 600;
   display: grid;
-  gap: 0.25rem;
+  gap: 0.5rem;
   place-items: center;
-  padding: 0.5rem;
+  place-content: center;
   border-radius: 0.5rem;
-  width: 10rem;
+  font-size: clamp(1rem, 1vw, 1.1rem);
+  padding: 0.5rem 1rem;
+  min-width: 7rem;
 }
 
 /* -----------------CONTACT----------------- */
 
 .contact-full-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100svh;
+  width: 100dvw;
   position: relative;
-  overflow: hidden;
+  height: 100svh;
+  width: 100dvw;
+  h2 {
+    position: absolute;
+    left: 50%;
+    top: 14%;
+    translate: -50% 0%;
+  }
 }
 
 .contact-inner-wrapper {
   display: flex;
-  max-width: 85dvw;
   justify-content: center;
   align-content: center;
-  gap: 2rem;
   background-color: var(--clr-secondary-bg);
-  border-radius: 1rem;
-  padding: 2rem;
-  h3 {
-    display: flex;
-    gap: 1rem;
-  }
-}
-
-#connect-icon {
-  height: 4rem;
-  width: 4rem;
-  color: var(--clr-font-accent);
+  height: 100%;
 }
 
 .contact-full-wrapper .contact-links-wrapper {
   display: grid;
   align-items: center;
-  gap: 1.3rem;
+  align-content: center;
+  gap: 0.5rem;
   overflow: hidden;
   p {
     color: var(--clr-font-primary);
@@ -660,9 +675,9 @@ main > section > h2 {
   background-color: var(--clr-primary-bg);
   align-items: center;
   border-radius: 0.5rem;
-  font-size: clamp(1.5rem, 20vw, 2rem);
+  font-size: clamp(2rem, 10vw, 4rem);
   gap: 1rem;
-  padding: 2rem;
+  padding: 1rem;
   padding-right: 5rem;
 }
 
@@ -690,6 +705,13 @@ main > section > h2 {
 
 @media (max-width: 1263px) {
   /* ----------------- PROJECTS---------- */
+
+  .projects-wrapper {
+    height: 100svh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
   .projects-list {
     display: grid;
     grid-template:
@@ -697,25 +719,32 @@ main > section > h2 {
       "projectTwo"
       "projectThree";
     gap: 0;
-    max-height: 80svh;
   }
 
   .project-card {
     display: flex;
+    align-items: center;
+    justify-items: center;
+    margin: 0 auto;
     flex-direction: row;
-    scale: 0.8;
     justify-content: center;
+    border: 0;
   }
 
   .project-card img {
-    flex: 1;
+    border: 0;
+
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0.5rem;
+    margin: 0;
+    padding: 0;
   }
 
   .project-text-wrapper {
     flex: 2;
+    border: 0;
+
     height: 100%;
     padding: 1rem 3rem;
     border-top-left-radius: 0;
@@ -776,7 +805,7 @@ main > section > h2 {
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(50px);
-    z-index: 100;
+    z-index: 1000;
     font-size: calc(1.5vw + 1.5vh);
     border: 2px solid var(--clr-font-accent);
     user-select: none;
@@ -801,27 +830,21 @@ main > section > h2 {
   }
 
   /* ----------------- PROJECTS---------- */
+
   .projects-list {
     display: grid;
     grid-template:
       "projectOne"
       "projectTwo"
       "projectThree";
-    gap: 0;
-    padding: 0;
-    margin: 0;
-    width: 100dvw;
-    place-content: center;
-    place-items: center;
   }
 
   .project-card {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    height: calc(85svh / 3);
-    border-radius: 0.5rem;
-    max-width: 100svw;
+    display: flex;
+    height: calc(80svh / 3);
+    overflow: hidden;
+    object-fit: fill;
+    aspect-ratio: 1;
   }
 
   .project-card .project-title {
@@ -837,14 +860,20 @@ main > section > h2 {
 
   .project-text-wrapper {
     border-radius: 0.5rem;
+    display: none;
   }
 
   .project-card img {
     outline: 0px;
     position: absolute;
-    height: 100%;
-    width: 100%;
     border-radius: 0.5rem;
+    border: 0;
+    object-fit: contain;
+    aspect-ratio: 1;
+
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
   }
 
   .project-card br {
