--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 :root {
   --clr-primary-bg: #0e0e0e;
   --clr-secondary-bg: rgba(32, 32, 32, 0.664);
-  --clr-bg-accent: hsl(0, 0%, 6%);
+  --clr-bg-accent: hsl(0, 0%, 9%);
   --clr-bg-accent-2: hsla(0, 0%, 18%, 0.363);
 
   --clr-font-primary: hsla(0, 0%, 83%, 0.904);
@@ -23,7 +23,7 @@
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: #87cefa #242424;
+  scrollbar-color: var(--clr-font-accent) transparent;
 }
 
 /* Chrome, Edge, and Safari */
@@ -32,19 +32,13 @@
 }
 
 *::-webkit-scrollbar-track {
-  background: #242424;
+  background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #87cefa;
-  border-radius: 0.5rem;
-  border: 10px double #ffffff;
+  border-radius: 1rem;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
 /* -----------------APP----------------- */
 
 .App {
@@ -61,13 +55,13 @@ body {
   font-style: normal;
 }
 
-main > section {
+/* main > section {
   scroll-snap-align: start;
   scroll-snap-stop: always;
-}
+} */
 
 main > section > h2 {
-  font-size: clamp(1rem, 10vw, 3rem);
+  font-size: clamp(1rem, 10vw, 5rem);
   pointer-events: none;
   user-select: none;
   color: var(--clr-font-primary);
@@ -82,23 +76,21 @@ main > section > h2 {
   position: fixed;
   font-optical-sizing: auto;
   font-weight: 900;
-  height: 4rem;
   padding-inline: 1rem;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav-logo-left {
   display: flex;
   align-items: center;
-  flex: 5;
   font-size: clamp(3rem, 4vw, 3.5rem);
   margin-right: 1rem;
-}
-
-.nav-logo-left a {
-  user-select: none;
-  text-decoration: none;
-  color: var(--clr-font-accent);
+  a {
+    user-select: none;
+    text-decoration: none;
+    color: var(--clr-font-accent);
+  }
 }
 
 .nav-items-right {
@@ -106,23 +98,64 @@ main > section > h2 {
   gap: 5rem;
   font-size: clamp(1.3rem, 1.5vw, 1.5rem);
   align-items: center;
-  margin-inline: 2rem;
+  margin-inline: 1rem;
 }
 
-.nav-items-right a {
+.nav-items-right a:not(.CV) {
   user-select: none;
   text-decoration: none;
   color: var(--clr-font-primary);
   font-weight: 600;
-  outline: 2px solid transparent;
-  padding: 1rem;
-  padding-bottom: 0;
 }
 
-.nav-items-right a:hover {
-  user-select: none;
+.nav-items-right a:not(.CV):hover {
   color: var(--clr-font-accent);
-  text-decoration: underline;
+}
+
+.CV {
+  background-color: var(--clr-font-accent);
+  color: var(--clr-primary-bg);
+  font-weight: 800;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-weight: 600;
+  padding: 0.75rem 2rem;
+  border-radius: 0.5rem;
+  text-align: center;
+  font-size: clamp(0.85rem, 2vw, 1rem);
+  position: relative;
+}
+
+#download-icon {
+  position: absolute;
+  display: grid;
+  place-content: center;
+  place-items: center;
+  opacity: 0;
+  height: 28px;
+  width: 28px;
+  transition: all 0.5s ease-in-out forwards;
+}
+
+.CV:hover,
+.CV:focus {
+  background-color: var(--clr-primary-bg);
+  outline: 1px solid var(--clr-font-accent);
+  transition: all 0.5s ease-in-out;
+  transition-delay: 0.25s;
+
+  a,
+  p {
+    transition: all 0.5s ease-in-out;
+  }
+
+  #download-icon {
+    opacity: 100%;
+    transition-delay: 0.25s;
+    color: var(--clr-font-accent);
+  }
 }
 
 /* ----------------- NAV TABLET AND BELOW---------- */
@@ -140,8 +173,6 @@ main > section > h2 {
   display: none;
 }
 
-/* ----------------- MEDIA Q---------- */
-
 /* -----------------HOME----------------- */
 .BG {
   position: fixed;
@@ -155,43 +186,18 @@ main > section > h2 {
 
 .home-wrapper {
   display: flex;
-  height: 100svh;
-  width: 100dvw;
-  position: relative;
-}
-
-.home-flex-1 {
-  display: flex;
   flex-direction: column;
   place-content: center;
   align-items: center;
   z-index: 100;
   height: 100svh;
   width: 100dvw;
+  position: relative;
 }
 
 .home-centered-content {
   padding: 2rem;
   margin-inline: 2rem;
-  /* background: var(--clr-bg-accent-2); */
-  backdrop-filter: blur(1px);
-}
-
-.greeting {
-  font-size: clamp(1.3rem, 5vw, 1.9rem);
-  font-weight: 500;
-  user-select: none;
-  opacity: 90%;
-  letter-spacing: 0.2ch;
-  word-spacing: -0.25ch;
-  font-style: italic;
-  opacity: 85%;
-}
-
-.name-wrapper {
-  display: flex;
-  flex-direction: column;
-  user-select: none;
 }
 
 .name {
@@ -205,32 +211,23 @@ main > section > h2 {
 
 .name-titles {
   display: flex;
-  justify-content: space-between;
+  justify-items: space-between;
   align-content: center;
-  padding: 0.75rem;
-  font-size: clamp(1rem, 2vw, 2rem);
-  margin-block: 0.5rem;
-  h2 {
-    font-weight: 600;
-    width: max-content;
-  }
+  padding: 0.5rem;
+  font-size: clamp(1.2rem, 2vw, 2rem);
+  font-weight: 600;
+  justify-content: center;
+  letter-spacing: 0.5rem;
 }
 
 #seperator {
   margin-block: 1rem;
 }
 
-.ctas-wrapper {
+.cta {
   display: flex;
-  gap: 1rem;
-  align-items: center;
-  user-select: none;
-  width: 100%;
-}
-
-.cta,
-.cta-CV {
-  display: flex;
+  width: max-content;
+  margin: 0 auto;
   font-weight: 600;
   padding: 1rem 4rem;
   border-radius: 0.5rem;
@@ -238,11 +235,6 @@ main > section > h2 {
   text-align: center;
   font-size: clamp(0.95rem, 2vw, 1.2rem);
   color: var(--clr-font-accent);
-  position: relative;
-}
-
-.cta {
-  flex: 1;
   background-color: var(--clr-secondary-bg);
   backdrop-filter: blur(20px);
   align-items: center;
@@ -250,106 +242,9 @@ main > section > h2 {
 }
 
 .cta:hover {
-  background-color: var(--clr-primary-bg);
-  transition: all 1s ease-in-out;
-}
-
-.cta-CV {
-  /* flex: 0.05; */
   background-color: var(--clr-font-accent);
   color: var(--clr-primary-bg);
-  font-weight: 800;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-}
-
-#download-icon {
-  position: absolute;
-  opacity: 0;
-  height: 28px;
-  width: 28px;
-  transition: all 0.5s ease-in-out;
-}
-.cta-CV:hover,
-.cta-CV:focus {
-  background-color: var(--clr-primary-bg);
-  outline: 1px solid var(--clr-font-accent);
-  transition: all 0.5s ease-in-out;
-  #download-icon {
-    opacity: 100%;
-    transition-delay: 0.25s;
-
-    color: var(--clr-font-accent);
-  }
-}
-
-.cta::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 0;
-  height: 0;
-  background: transparent;
-  border: 2px solid transparent;
-  border-radius: 0rem;
-}
-
-.cta:hover::before {
-  animation: animateBeforeBorder 0.5s ease-in-out forwards;
-}
-
-@keyframes animateBeforeBorder {
-  0% {
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-  }
-  100% {
-    width: 100%;
-    border-radius: 0.25rem;
-    height: 100%;
-    border-top-color: var(--clr-font-accent);
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    border-left-color: var(--clr-font-accent);
-  }
-}
-
-.cta::after {
-  content: "";
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  width: 0;
-  height: 0;
-  background: transparent;
-  border: 2px solid transparent;
-  border-radius: 0.05rem;
-}
-
-.cta:hover::after {
-  animation: animateAfterBorder 0.5s ease-in-out forwards;
-}
-
-@keyframes animateAfterBorder {
-  0% {
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-  }
-  100% {
-    width: 100%;
-    height: 100%;
-    border-radius: 0.25rem;
-    border-top-color: transparent;
-    border-right-color: var(--clr-font-accent);
-    border-bottom-color: var(--clr-font-accent);
-    border-left-color: transparent;
-  }
+  transition: all 1s ease-in-out;
 }
 
 .home-wrapper .contact-links-wrapper {
@@ -386,190 +281,194 @@ main > section > h2 {
 
 /* -----------------PROJECTS----------------- */
 
-.projects-wrapper {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  height: 100svh;
-  width: 100dvw;
-
-  h2 {
-    position: absolute;
-    left: 50%;
-    top: 14%;
-    translate: -50% 0%;
-  }
-}
-
-.projects-list {
-  margin: 0 auto;
-  display: grid;
-  grid-template: "projectOne projectTwo projectThree";
-  width: 100dvw;
-  gap: 1rem;
-  height: 100svh;
-  overflow: hidden;
-  align-content: center;
-  justify-content: center;
-}
-
 #project-1 {
-  grid-area: projectOne;
   img {
     filter: hue-rotate(180deg);
   }
 }
 
-#project-2 {
-  grid-area: projectTwo;
+/* #project-2 {
 }
 
 #project-3 {
-  grid-area: projectThree;
+} */
+
+.projects-wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--clr-secondary-bg);
+  padding-block: 5rem;
+  h2 {
+    margin: 0 auto;
+  }
+}
+
+.projects-list {
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
+  gap: 5rem;
 }
 
 .project-card {
-  font-size: clamp(0.9rem, 0.5vw, 3rem);
-  min-height: fit-content;
-  max-width: 30rem;
+  font-size: clamp(1rem, 0.75vw, 1.3rem);
   display: flex;
-  flex-direction: column;
-}
-
-.project-card img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  flex: 1;
-  border-radius: 0.5rem 0.5rem 0 0;
-  border: 3px solid var(--clr-bg-accent);
-  border-bottom: none;
-  background-color: var(--clr-secondary-bg);
+  justify-content: center;
+  height: 50rem;
+  hr {
+    margin-block: 0.5rem;
+  }
+  img {
+    object-fit: cover;
+  }
 }
 
 .project-text-wrapper {
   display: flex;
   flex-direction: column;
-  height: 20rem;
-  padding-block: 1rem;
   gap: 0.4rem;
-  background: var(--clr-secondary-bg);
-  border: 3px solid var(--clr-bg-accent);
-  border-top: none;
-  padding-inline: 1rem;
-  flex: 2;
-  border-radius: 0 0 0.5rem 0.5rem;
+  background: var(--clr-bg-accent);
   backdrop-filter: blur(15px);
+  padding: 3rem;
+  h3 {
+    color: var(--clr-font-accent);
+    font-size: xx-large;
+    font-weight: 700;
+  }
 }
-
-.project-title {
-  color: var(--clr-font-accent);
-  font-size: xx-large;
-  font-weight: 700;
+.project-stack {
+  padding-block: 1rem;
 }
-
 .project-description {
   display: flex;
-  max-width: 25rem;
-}
-.project-link-wrapper {
-  display: flex;
-  height: 100%;
-  gap: 2rem;
-  justify-content: left;
-  height: 100%;
-  font-size: larger;
-  font-weight: 500;
-  padding-block: 1rem;
+  max-width: 50rem;
+  line-height: 1.5rem;
 }
 
-.project-link-wrapper a {
-  text-decoration: underline;
+.project-link-wrapper {
+  display: flex;
+  gap: 2rem;
+  justify-content: left;
+  font-size: large;
+  font-weight: 500;
+  padding-block: 1rem;
+  a {
+    text-align: center;
+    color: var(--clr-font-primary);
+    background-color: var(--clr-secondary-bg);
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+  }
+}
+
+#view-more-projects-button {
+  display: flex;
+  width: 25%;
+  font-size: clamp(0.85rem, 2vw, 1rem);
+  margin: 0 auto;
+  position: relative;
+  outline: 1px solid var(--clr-font-accent);
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
   text-align: center;
-  color: var(--clr-font-accent);
+  min-width: 15rem;
+
+  p,
+  a {
+    text-decoration: none;
+  }
+}
+
+#link-to-more-projects-icon {
+  position: absolute;
+  display: grid;
+  place-content: center;
+  place-items: center;
+  opacity: 0%;
+  height: 28px;
+  width: 100%;
+  transition: all 0.5s ease-in-out forwards;
+}
+
+#view-more-projects-button:hover,
+#view-more-projects-button:focus {
+  background-color: var(--clr-font-accent);
+  color: var(--clr-primary-bg);
+  transition: all 0.5s ease-in-out forwards;
+  transition-delay: 0.25s;
+  p {
+    opacity: 0%;
+  }
+  #link-to-more-projects-icon {
+    opacity: 100%;
+    transition-delay: 0.25s;
+    width: 100%;
+    transition: all 0.5s ease-in-out forwards;
+  }
 }
 
 /* -----------------ABOUT----------------- */
 .about-wrapper {
-  height: 100svh;
-  width: 100dvw;
   display: flex;
   flex-direction: column;
-  position: relative;
-  height: 100svh;
-  width: 100dvw;
-  overflow: hidden;
+  padding-block: 5rem;
+
   h2 {
-    position: absolute;
-    left: 50%;
-    top: 10%;
-    translate: -50% 0%;
+    margin: 0 auto;
   }
 }
 
 .about-inner-wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  position: relative;
-  flex-wrap: wrap;
-  margin: auto;
+  padding-block: 5rem;
+  gap: 5rem;
 }
 
 .about-description-wrapper {
   display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.about-text-plus-headshot {
-  display: flex;
-  gap: 1rem;
+  gap: 2rem;
+  align-items: center;
 }
 
 .headshot-img {
-  object-fit: contain;
-  height: 25rem;
+  object-fit: cover;
   border-radius: 0.5rem;
-  border: 3px solid var(--clr-secondary-bg);
-  height: 100%;
+  height: 25rem;
+  width: 25rem;
+}
+
+.text-and-edu {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 40rem;
 }
 
 .about-span {
-  border-radius: 0.5rem;
   line-height: 1.5rem;
   font-size: clamp(1rem, 1vw, 1.2rem);
-  background: var(--clr-secondary-bg);
-  border: 0.05rem solid var(--clr-bg-accent);
-  max-width: 25rem;
-  min-width: 15rem;
-  padding: 0.5rem;
   font-weight: 400;
-  height: stretch;
 }
 
 .education-wrapper {
   display: grid;
+  font-size: clamp(0.85rem, 1vw, 1.1rem);
   gap: 1rem;
-  font-size: clamp(1rem, 1vw, 1.2rem);
-  border-radius: 0.5rem;
-  border: 2px solid var(--clr-bg-accent);
-  padding: 1em;
-  background: var(--clr-secondary-bg);
-  border: 0.05rem solid var(--clr-secondary-bg);
-}
-
-.education-wrapper h3 {
-  font-size: clamp(1.5rem, 1vw, 1.7rem);
 }
 
 .education {
   display: flex;
-  justify-content: left;
-  gap: 5rem;
+  gap: 3rem;
+}
+.education-wrapper h3 {
+  font-size: clamp(1.5rem, 1vw, 1.7rem);
 }
 
 .blue-text {
@@ -583,7 +482,7 @@ main > section > h2 {
 .skills-wrapper {
   display: grid;
   gap: 1rem;
-  height: 100%;
+  width: 50%;
 }
 
 .skills-card {
@@ -591,11 +490,9 @@ main > section > h2 {
   list-style: none;
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
+  gap: 1rem;
   align-items: center;
-  background: var(--clr-secondary-bg);
-  border: 0.05rem solid var(--clr-bg-accent);
   backdrop-filter: blur(50px);
-  width: 100%;
 }
 
 .skills-card h3 {
@@ -617,8 +514,8 @@ main > section > h2 {
 
 .skills-items li {
   border: 2px solid var(--clr-bg-accent-2);
-  background: var(--clr-secondary-bg);
   width: 100%;
+  background-color: var(--clr-secondary-bg);
   font-weight: 600;
   display: grid;
   gap: 0.5rem;
@@ -627,39 +524,35 @@ main > section > h2 {
   border-radius: 0.5rem;
   font-size: clamp(1rem, 1vw, 1.1rem);
   padding: 0.5rem 1rem;
-  min-width: 7rem;
+  min-width: 10rem;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* -----------------CONTACT----------------- */
 
 .contact-full-wrapper {
-  height: 100svh;
-  width: 100dvw;
-  position: relative;
-  height: 100svh;
-  width: 100dvw;
+  display: flex;
+  flex-direction: column;
+  padding-block: 5rem;
+  background-color: var(--clr-secondary-bg);
+  gap: 5rem;
+
   h2 {
-    position: absolute;
-    left: 50%;
-    top: 14%;
-    translate: -50% 0%;
+    margin: 0 auto;
   }
 }
 
 .contact-inner-wrapper {
   display: flex;
   justify-content: center;
-  align-content: center;
-  background-color: var(--clr-secondary-bg);
-  height: 100%;
 }
 
 .contact-full-wrapper .contact-links-wrapper {
-  display: grid;
+  display: flex;
   align-items: center;
   align-content: center;
-  gap: 0.5rem;
-  overflow: hidden;
+  gap: 2rem;
+
   p {
     color: var(--clr-font-primary);
     font-size: large;
@@ -670,15 +563,20 @@ main > section > h2 {
 
 .contact-full-wrapper .contact-links-wrapper a {
   display: flex;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  border: 2px solid var(--clr-bg-accent-2);
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
   text-decoration: none;
   color: var(--clr-font-accent);
-  background-color: var(--clr-primary-bg);
   align-items: center;
   border-radius: 0.5rem;
   font-size: clamp(2rem, 10vw, 4rem);
   gap: 1rem;
-  padding: 1rem;
-  padding-right: 5rem;
+  padding: 3rem;
 }
 
 /* -----------------FOOTER----------------- */
@@ -702,70 +600,9 @@ main > section > h2 {
 }
 
 /* ----------------- MEDIA Q---------- */
+/* -----------------TABLET-------------------------------------------------------------- */
 
 @media (max-width: 1263px) {
-  /* ----------------- PROJECTS---------- */
-
-  .projects-wrapper {
-    height: 100svh;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-  }
-  .projects-list {
-    display: grid;
-    grid-template:
-      "projectOne"
-      "projectTwo"
-      "projectThree";
-    gap: 0;
-  }
-
-  .project-card {
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    margin: 0 auto;
-    flex-direction: row;
-    justify-content: center;
-    border: 0;
-  }
-
-  .project-card img {
-    border: 0;
-
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0.5rem;
-    margin: 0;
-    padding: 0;
-  }
-
-  .project-text-wrapper {
-    flex: 2;
-    border: 0;
-
-    height: 100%;
-    padding: 1rem 3rem;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 0.5rem;
-  }
-
-  .project-link-wrapper {
-    align-items: flex-end;
-  }
-
-  .project-description {
-    min-width: 15rem;
-    max-width: 30rem;
-  }
-  /* ----------------- ABOUT---------- */
-}
-
-/* -----------------MOBILE---------- */
-
-@media (max-width: 768px) {
   /* ----------------- NAV---------- */
   .navbar {
     padding: 0;
@@ -828,107 +665,18 @@ main > section > h2 {
   .nav-mobile-wrapper-open > hr {
     width: 55%;
   }
-
   /* ----------------- PROJECTS---------- */
 
-  .projects-list {
-    display: grid;
-    grid-template:
-      "projectOne"
-      "projectTwo"
-      "projectThree";
-  }
-
-  .project-card {
-    display: flex;
-    height: calc(80svh / 3);
-    overflow: hidden;
-    object-fit: fill;
-    aspect-ratio: 1;
-  }
-
-  .project-card .project-title {
-    z-index: 100;
-    position: absolute;
-    bottom: 1rem;
-    left: 1rem;
-    text-align: left;
-    align-items: center;
-    display: flex;
-    backdrop-filter: blur(20px);
-  }
-
-  .project-text-wrapper {
-    border-radius: 0.5rem;
-    display: none;
-  }
-
-  .project-card img {
-    outline: 0px;
-    position: absolute;
-    border-radius: 0.5rem;
-    border: 0;
-    object-fit: contain;
-    aspect-ratio: 1;
-
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-
-  .project-card br {
-    display: none;
-  }
-
-  .project-card:hover,
-  .project-card:focus {
-    img {
-      visibility: hidden;
-    }
-    h3 {
-      position: unset;
-    }
-    .project-description {
-      padding: 0;
-    }
-    .project-text-wrapper {
-      display: flex;
-      width: 100%;
-      justify-content: left;
-      padding: 2rem;
-      font-size: 1rem;
-    }
-    .project-link-wrapper {
-      padding: 0;
-      /* margin-top: 0.5rem; */
-      margin: 0;
-    }
-  }
-
   /* ----------------- ABOUT---------- */
-  /* .about-grid-top {
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-  .about-grid-left {
-    max-width: 65dvw;
-  } */
+}
+
+/* -----------------MOBILE-------------------------------------------------------------- */
+
+@media (max-width: 768px) {
 }
 
 /* -----------------MEDIA Q END----------------- */
 
 /* @media screen and (max-width: 658px) and (orientation: landscape) {
-  html {
-    font-size: 55%;
-  }
-  .projects-list {
-  }
 
-  h3 {
-    font-size: 30%;
-  }
-
-  .navbar {
-    height: 10%;
-  }
 } */
