--- a/src/App.css
+++ b/src/App.css
@@ -55,10 +55,6 @@
   font-style: normal;
 }
 
-/* main > section {
-  scroll-snap-align: start;
-  scroll-snap-stop: always;
-} */
 
 main > section > h2 {
   font-size: clamp(1rem, 10vw, 5rem);
@@ -67,6 +63,9 @@ main > section > h2 {
   color: var(--clr-font-primary);
 }
 
+hr {
+  opacity: 25%;
+}
 /* -----------------NAVBAR----------------- */
 
 .navbar {
@@ -79,6 +78,7 @@ main > section > h2 {
   padding-inline: 1rem;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--clr-primary-bg);
 }
 
 .nav-logo-left {
@@ -175,22 +175,22 @@ main > section > h2 {
 }
 
 /* -----------------HOME----------------- */
-.BG {
+/* .BG {
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   opacity: 25%;
-  z-index: 0;
-}
+  z-index: -10;
+} */
 
 .home-wrapper {
   display: flex;
   flex-direction: column;
   place-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 100000;
   height: 100svh;
   width: 100dvw;
   position: relative;
@@ -293,7 +293,6 @@ main > section > h2 {
 .projects-wrapper {
   display: flex;
   flex-direction: column;
-  /* background-color: var(--clr-secondary-bg); */
   padding-block: 5rem;
   h2 {
     margin: 0 auto;
@@ -302,7 +301,6 @@ main > section > h2 {
 
 .projects-list {
   display: flex;
-  flex-direction: column;
   padding: 5rem;
   gap: 5rem;
   margin: 0 auto;
@@ -559,7 +557,6 @@ main > section > h2 {
   width: 100vw;
   align-items: center;
   justify-content: center;
-  /* background: var(--clr-primary-bg); */
   color: var(--clr-font-primary);
   text-align: center;
   user-select: none;
